Event serialization of LogHub events is now optional and must requested in the Encoder.