@@ -1,20 +1,17 @@
 package loghub.encoders;
 
 import java.beans.IntrospectionException;
-import java.io.IOException;
 import java.net.InetAddress;
 import java.net.URI;
 import java.time.Instant;
 import java.util.Date;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.junit.Assert;
-import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
@@ -23,8 +20,6 @@ import loghub.BuildableConnectionContext.GenericConnectionContext;
 import loghub.LogUtils;
 import loghub.Tools;
 import loghub.VariablePath;
-import loghub.cbor.CborParser.CborParserFactory;
-import loghub.cbor.LogHubEventTagHandler;
 import loghub.decoders.DecodeException;
 import loghub.events.Event;
 import loghub.events.EventsFactory;
@@ -33,7 +28,6 @@ public class TestCbor {
 
     private static Logger logger;
     private final EventsFactory eventsFactory = new EventsFactory();
-    private final CborParserFactory cborFactory = new CborParserFactory();
 
     @BeforeClass
     public static void configure() {
@@ -42,23 +36,11 @@ public class TestCbor {
         LogUtils.setLevel(logger, Level.TRACE, Cbor.class.getName());
     }
 
-    @Before
-    public void initCbor() {
-        cborFactory.setCustomHandling(LogHubEventTagHandler.EVENT_TAG, LogHubEventTagHandler.eventParser(eventsFactory), null);
-    }
-
-    public String toHex(byte[] data) {
-        StringBuilder sb = new StringBuilder();
-        for (byte b : data) {
-            sb.append(String.format("%02X ", b)); // ou "%02x" pour minuscule
-        }
-        sb.deleteCharAt(sb.length() - 1);
-        return sb.toString();
-    }
-
     @Test
     public void testRoundRobin() throws EncodeException, DecodeException {
-        loghub.encoders.Cbor encoder = loghub.encoders.Cbor.getBuilder().build();
+        Cbor.Builder ebuilder = Cbor.getBuilder();
+        ebuilder.setForwardEvent(true);
+        loghub.encoders.Cbor encoder = ebuilder.build();
         loghub.decoders.Cbor.Builder dbuilder = loghub.decoders.Cbor.getBuilder();
         dbuilder.setEventsFactory(eventsFactory);
         loghub.decoders.Cbor decoders = dbuilder.build();
@@ -73,7 +55,7 @@ public class TestCbor {
         byte[] result = encoder.encode(e);
         List<Event> received = decoders.decode(new GenericConnectionContext("laddr", "raddr"), result).map(Event.class::cast).toList();
         Assert.assertEquals(1, received.size());
-        Event event = received.get(0);
+        Event event = received.getFirst();
         Assert.assertEquals(ruuid, event.get("uuid"));
         Assert.assertEquals(uri, event.get("uri"));
         Assert.assertEquals(InetAddress.getLoopbackAddress(), event.getAtPath(VariablePath.of("a", "b")));
